# gruesome

./: .gitignore  1  2025-07-15-debugging-goto-change-room-command.txt  2025-07-16-timer-discussion.txt  2025-07-17-this-session-is-being-continued-from-a-previous-co.txt  BRANCH_OFFSET_OVERFLOW_FIX.md  BUGS.md  BUILTIN_FUNCTION_INTEGRATION_ANALYSIS.md  CI_TEST_DATA.md  CLAUDE.md  CLAUDE_HISTORICAL.md  CODEGEN_ANALYSIS.md  CODE_GENERATION_DEBUG_PLAN.md  COMPILER_ARCHITECTURE.md  COMPILER_STATUS_SEPT_5_2025.md  CONTENTS_FIX_PLAN.md  Cargo.toml  DEBUGGING_PLAYER_CONTENTS.md  DEBUGGING_STATE.md  DEBUG_SESSION_STATE.md  DEFERRED_BRANCH_DILEMMA.md  DEFERRED_BRANCH_PATCH_ANALYSIS.md  DEVELOPMENT.md  ERRANT_PUSH_PULL_TRACKING.md  EXIT_DICTIONARY_FIXUP_PLAN.md  FUNCTION_CALL_DEBUG_PLAN.md  GET_OBJECT_CONTENTS_IMPLEMENTATION_PLAN.md  HEADER_ARCHITECTURE_ANALYSIS.md  HISTORICAL_BUGS_RESOLVED.md  MAPPING_ANALYSIS.md  MEMORY_COLLISION_ANALYSIS.md  MERGE_AND_USAGE.md  NEW_STACK_ANALYSIS.md  NEW_STACK_STORE_PLAN.md  NEXT_SESSION_NOTES.md  NEXT_SESSION_PLAN.md  NEXT_SESSION_ROADMAP.md  NEXT_SESSION_TASKS.md  NOUN_OBJECT_MAPPING_ROADMAP.md  OBJECT_AND_PROPERTIES_LESSONS_LEARNED.md  (+170 more)
.claude/: README.md  settings.json
docs/: ADDRESS_RESOLUTION_FAILURE_ANALYSIS.md  ADMIN_GAME_LIBRARY_MANAGEMENT_PLAN.md  ARCHITECTURE.md  ARRAY_IMPLEMENTATION_ASSESSMENT.md  AVAILABLE_V3_GAMES.md  AWS_DEPLOYMENT_GUIDE.md  BINARY_TOOLS_AUDIT.md  BRANCH_LOGIC_INVERSION_ANALYSIS.md  BUG_17_DEBUGGING_PLAN.md  BUG_17_ERASE_LINE_IN_V3.md  BUG_18_ANALYSIS.md  BUG_18_DEBUGGING_PLAN.md  BUG_18_INVALID_OPCODE_0x00.md  BUG_22_ANALYSIS.md  BUG_5_OBJECT_TREE_ITERATION_FIX.md  BUG_EXIT_DESTINATION_VARIABLE_CORRUPTION.md  BUG_PROPERTY_21_NOT_SERIALIZED.md  BUILTIN_FUNCTION_CONVERSION_PLAN.md  CALL_STACK_DEBUGGING_IMPLEMENTATION.md  CLAUDE_HISTORICAL.md  CODEBASE_GUIDE.md  CODEGEN_REFACTORING_ANALYSIS.md  COMPILER_ARCHITECTURE.md  COMPILER_COMPLIANCE_AND_OPTIMIZATION.md  COMPILER_COMPLIANCE_WORK.md  COMPILER_REORDERING.md  COMPILER_ROUTINE_HEADER_IMPLEMENTATION_PLAN.md  COMPILER_STATUS_SEPT_5_2025.md  COMPILE_TIME_STRINGS.md  COMPUTED_PROPERTY_IMPLEMENTATION_ARCHIVE.md  CONDITIONAL_COMPILATION_BUG_ANALYSIS.md  CONTAINER_CONTENTS_ITERATOR_FIX_PLAN.md  CONTINUATION_PLAN.md  DEAD_CODE_ANALYSIS_codegen.md  DEBUG_MESSAGE_CLEANUP_PLAN.md  DEPLOYMENT_ARCHITECTURE.md  DICTIONARY_ENCODING_ROOT_CAUSE.md  DISASSEMBLER_BOUNDARY_COORDINATION_FIX.md  DISASSEMBLER_DESIGN.md  DISASSEMBLER_INITIAL_PC_ANALYSIS.md  (+125 more)
examples/: arithmetic_test.grue  bare_for_loop.grue  basic_test.grue  builtin_test.grue  chaining_edge_cases.grue  collision_test.grue  comprehensive_object_demo.grue  contents_test.grue  control_flow_simple.grue  control_flow_test.grue  debug_10_functions.grue  debug_15_functions.grue  debug_5_functions.grue  debug_8c_instruction.grue  debug_climb.grue  debug_contents_vs_loop.grue  debug_intermediate.grue  debug_invalid_opcode.grue  debug_medium_complexity.grue  debug_mini_zork_reduced_1.grue  debug_mini_zork_reduced_2.grue  debug_mini_zork_reduced_3.grue  debug_minimal_test.grue  debug_multi_room.grue  debug_object_error.grue  debug_property_strings.grue  debug_single_array_iteration.grue  debug_ultra_minimal.grue  debug_with_main_loop.grue  disassemble.rs  disassemble_routine.rs  empty_test.grue  empty_test_fixed.grue  enhanced_expressions_test.grue  error_handling_test.grue  for_loop_simple.grue  for_loop_test.grue  isolated_for_loop.grue  mini_zork.grue  mini_zork_simple.grue  (+143 more)
frontend/: app.js  dev-config.js  gruesome.js  gruesome_bg.wasm  index.html  mock-api.js  package-lock.json  package.json  style.css
infrastructure/: INFRASTRUCTURE_MAPPING.md  LAMBDA_DEPLOYMENT.md  PIVOT_PLAN.md  QUICK_LAMBDA_DEPLOY.md  cdk.context.json  cdk.json  package-lock.json  package.json
infrastructure/lambda/gruesome-admin-api/: Cargo.toml
infrastructure/lambda/gruesome-admin-api/src/: auth.rs  error.rs  games.rs  main.rs  metadata.rs  upload.rs  validation.rs
infrastructure/lambda/gruesome-api/admin/: Cargo.toml
infrastructure/lambda/gruesome-api/admin/src/: dynamodb_service.rs  error.rs  handlers.rs  jwt_auth.rs  main.rs  models.rs  s3_service.rs
infrastructure/lambda/gruesome-api/auth/: Cargo.toml
infrastructure/lambda/gruesome-api/auth/src/: cognito.rs  dynamodb_service.rs  error.rs  handlers.rs  jwt_auth.rs  main.rs  models.rs
infrastructure/lambda/gruesome-api/game/: Cargo.toml
infrastructure/lambda/gruesome-api/game/src/: error.rs  game_service.rs  handlers.rs  jwt_auth.rs  main.rs  models.rs  save_service.rs
scripts/: README_COMPREHENSIVE_TEST.md  README_ZORK1_TEST.md  analyze_z3_properties.py  build-all-targets.sh  build-and-run-basic-test.sh  build-and-run-mini-zork.sh  check-ci.sh  check-opcodes.sh  ci_test.sh  debug-mini-zork.sh  dev-mini-zork.sh  dump_reflog.sh  generate_opcodes.rs  grue-demo.sh  run-all-tests.sh  run-tests.sh  run_game.sh  show_actual_output.sh  test_all_examples.sh  test_disassembler_mini_zork.sh  test_disassembler_zork1.sh  test_key_examples.sh  test_literal_pattern_matching.sh  test_mini_zork.sh  test_mini_zork_comprehensive.sh  test_mini_zork_fixed.sh  test_minimal_repro.sh  test_score_functionality.sh  test_simple.sh  test_zork1_comprehensive.sh  validate_layout_baseline.sh  verify_fix_works.sh
src/: branch_tests.rs  call_tests.rs  debug_symbols.rs  debugger.rs  dictionary.rs  dictionary_clean.rs  dictionary_tests.rs  disasm_txd.rs  disassembler.rs  disassembler_tests.rs  display.rs  display_crossterm.rs  display_headless.rs  display_logging.rs  display_manager.rs  display_ratatui.rs  display_trait.rs  display_v3.rs  display_v4.rs  game.rs  gamememorymap.rs  header.rs  input_v3.rs  input_v4.rs  instruction.rs  instruction_tests.rs  interpreter.rs  interpreter.rs.bak  io_advanced_tests.rs  io_tests.rs  lib.rs  main.rs  object.rs  opcode_tables.rs  opcodes_display.rs  opcodes_io.rs  opcodes_math.rs  opcodes_memory.rs  opcodes_object.rs  opcodes_stack.rs  (+22 more)
tests/: LOCALIZATION_TESTS.md  actual_test.z3  address_debug.z3  analyze_builtins.z3  archive_verify_object.z3  arithmetic_test.z3  climb_test.z3  (+591 more)
(+609 files in other folders)
