[package]
name = "gruesome"
version = "2.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# No feature flags needed - ratatui is always required for v4+ games

[dependencies]
rand = "*"
bitreader = "*"
bitvec = "*"
lazy_static = "*"
log = "*"
env_logger = "*"
test-log = "*"
sub-array = "*"
crossterm = "0.27"
atty = "0.2"
ratatui = "0.26"
indexmap = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Core Components
[[bin]]
name = "grue-compiler"
path = "src/bin/grue_compiler.rs"

[[bin]]
name = "gruedasm-txd"
path = "src/bin/gruedasm-txd.rs"

# Essential Testing Tools
[[bin]]
name = "test-v3-regression"
path = "src/bin/test_v3_regression.rs"

[[bin]]
name = "test-opcode-validation"
path = "src/bin/test_opcode_validation.rs"

[[bin]]
name = "test-save-restore"
path = "src/bin/test_save_restore.rs"

[[bin]]
name = "test-timed-input"
path = "src/bin/test_timed_input.rs"

[[bin]]
name = "test-random"
path = "src/bin/test_random.rs"

[[bin]]
name = "test-seastalker"
path = "src/bin/test_seastalker.rs"

[[bin]]
name = "test-amfv-opening"
path = "src/bin/test_amfv_opening.rs"

# Game Analysis Tools
[[bin]]
name = "disasm-amfv"
path = "src/bin/disasm_amfv.rs"

# Development Utilities
[[bin]]
name = "demo-window-ops"
path = "src/bin/demo_window_ops.rs"

[[bin]]
name = "check-addr"
path = "src/bin/check_addr.rs"

# Build Script
[[bin]]
name = "generate-opcodes"
path = "scripts/generate_opcodes.rs"