[package]
name = "gruesome"
version = "2.16.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["dep:crossterm", "dep:ratatui", "dep:atty", "dep:env_logger"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys", "dep:console_log", "dep:console_error_panic_hook", "getrandom/js"]

[dependencies]
# Core dependencies (both native and wasm)
rand = "*"
bitreader = "*"
bitvec = "*"
lazy_static = "*"
log = "*"
test-log = "*"
sub-array = "*"
indexmap = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
getrandom = "0.2"

# Native-only dependencies
crossterm = { version = "0.27", optional = true }
atty = { version = "0.2", optional = true }
ratatui = { version = "0.26", optional = true }
env_logger = { version = "*", optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Window", "Performance"] }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

# Core Components
[[bin]]
name = "grue-compiler"
path = "src/bin/grue_compiler.rs"

[[bin]]
name = "gruedasm-txd"
path = "src/bin/gruedasm-txd.rs"

# Essential Testing Tools
[[bin]]
name = "test-v3-regression"
path = "src/bin/test_v3_regression.rs"

[[bin]]
name = "test-opcode-validation"
path = "src/bin/test_opcode_validation.rs"

[[bin]]
name = "test-save-restore"
path = "src/bin/test_save_restore.rs"

[[bin]]
name = "test-timed-input"
path = "src/bin/test_timed_input.rs"

[[bin]]
name = "test-random"
path = "src/bin/test_random.rs"

[[bin]]
name = "test-seastalker"
path = "src/bin/test_seastalker.rs"

[[bin]]
name = "test-amfv-opening"
path = "src/bin/test_amfv_opening.rs"

# Game Analysis Tools
[[bin]]
name = "disasm-amfv"
path = "src/bin/disasm_amfv.rs"

# Development Utilities
[[bin]]
name = "demo-window-ops"
path = "src/bin/demo_window_ops.rs"

[[bin]]
name = "check-addr"
path = "src/bin/check_addr.rs"

# Build Script
[[bin]]
name = "generate-opcodes"
path = "scripts/generate_opcodes.rs"