[package]
name = "gruesome-admin-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS Lambda runtime
lambda_runtime = "0.8"
lambda_http = { version = "0.8", default-features = false, features = ["apigw_http"] }
tokio = { version = "1", features = ["macros"] }

# AWS SDK
aws-config = "1.1"
aws-sdk-dynamodb = "1.12"
aws-sdk-s3 = "1.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

# HTTP
http = "0.2"

# Base64 encoding/decoding
base64 = "0.21"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
