[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# AWS SDK
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-cognitoidentityprovider = "1.0"

# JWT
jsonwebtoken = "9.0"

[[bin]]
name = "admin"
path = "src/main.rs"
