[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Lambda runtime
lambda_runtime = "0.13"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# AWS SDKs
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.52"
aws-sdk-dynamodb = "1.54"

# JWT validation
jsonwebtoken = "9.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP status codes
http = "1.0"
