[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.54"
aws-sdk-s3 = "1.62"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
jsonwebtoken = "9.2"
chrono = "0.4"
